<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UH Libraries\' News</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="weblogs">weblogs</string>
    <string name="uhdl_logo_description">University of Houston Libraries</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error getting data from the blog.</string>
    <string name="no_items">There are no items to display.</string>
    <string name="electronic_resources">Electronic Resources</string>
    <string name="speccol">Special Collections</string>
    <string name="architecture">Architecture</string>
    <string name="music">Music</string>
    <string name="title_activity_electronic_resource_view">Electronic Resources</string>
    <string name="title_activity_speccol">Special Collections</string>
    <string name="title_activity_architecture_view">Architecture and Art</string>
    <string name="title_activity_music_view">Music</string>

</resources>
