<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8102E"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/uhdl_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/uhdl_logo_description"
        android:src="@drawable/uh_libraries_white" />

    <ImageButton
        android:id="@+id/img_button_weblogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uhdl_logo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/weblogs"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:src="@drawable/weblogs_original" />
    
    <ImageButton
        android:id="@+id/img_button_electronic_resources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_button_weblogs"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/electronic_resources"
        android:src="@drawable/electronic_resources_original" />

    <ImageButton
        android:id="@+id/img_button_speccol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_button_electronic_resources"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/speccol"
        android:src="@drawable/speccol_original" />

    <ImageButton
        android:id="@+id/img_button_architecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_button_speccol"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/architecture"
        android:src="@drawable/architecture_original" />

    <ImageButton
        android:id="@+id/img_button_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_button_architecture"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/music"
        android:src="@drawable/music_original" />

</RelativeLayout>